Revision history for {{$dist->name}}

{{$NEXT}}

1.003003 2014-09-28T07:27:06Z
 [Bugfix]
 - spew_raw to avoid \r\n translation on Win32

 [Dependencies::Stats]
 - Dependencies changed since 1.003002, see misc/*.deps* for details
 - develop: (suggests: ↑1)

1.003002 2014-09-07T09:07:01Z
 [00 Bugfix]
 - Warn and auto-wrap $expected in meta_path_deeply to avoid other instances of
   kentnl/Dist-Zilla-Plugin-Prereqs-MatchInstalled#3

 [Dependencies::Stats]
 - Dependencies changed since 1.003001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: (recommends: ↑1)
 - test: (recommends: ↑1)

1.003001 2014-08-29T09:27:43Z
 [00 Bugfix]
 - Make sure failing to create a build dir is handled properly

 [Dependencies::Stats]
 - Dependencies changed since 1.003000, see misc/*.deps* for details
 - runtime: ↑1

1.003000 2014-08-29T07:46:22Z
 [00 Minor]
 - Add create_plugin utility.
 - Test enhancements.

 [Dependencies::Stats]
 - Dependencies changed since 1.002000, see misc/*.deps* for details
 - runtime: +2

 [Tests]
 - Test coverage improved.

1.002000 2014-08-22T17:40:28Z
 [00 Minor]
 - Prefer Test::Differences everywhere it is possible.

 [Dependencies::Stats]
 - Dependencies changed since 1.001002, see misc/*.deps* for details
 - develop: +1
 - runtime: (recommends: +1)

1.001002 2014-08-21T05:38:29Z
 [Bugfix]
 - make sure build is in fact, always invoked when builder is required.

 [Dependencies::Stats]
 - Dependencies changed since 1.001001, see misc/*.deps* for details
 - develop: (suggests: ↑1)

1.001001 2014-08-18T23:05:17Z
 [Bugfix]
 - Not all versions of Data::DPath exist on <5.10, so if you happen to say "Ignore that" somehow the dpath related
   tests will instead TODOskip

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - runtime: +1

1.001000 2014-08-18T21:14:28Z
 [00 Major]
 - add `dztest` function.
 - add `::dztest` package which has been floating around in various dists so far.
