@@ -1,6 +1,8 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
-1.003004
+1.004000
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.020003 → 2.021000
 
 1.003003 2014-09-28T07:27:06Z
  [Changed / develop suggests]
