@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.003004
+1.004000
 
 1.003003 2014-09-28T07:27:06Z
 
